@@ -62,21 +62,31 @@ err:
 
 int Config::__parse (const QVariantMap &jo)
 {
-    config.timeout = jo["timeout"].toInt();
-    ECE_DBG("timeout=" << config.timeout);
+    if (!jo["timeout"].isNull())
+        this->config.timeout = jo["timeout"].toInt();
+    ECE_DBG("timeout=" << this->config.timeout);
 
-    config.csrTmplPath = __join_paths(config.prefix.absoluteFilePath(), \
-            jo["csr"].toMap()["tmpl"].toString());
-    ECE_DBG("csr tmpl=" << config.csrTmplPath.absoluteFilePath());
+    if (!jo["csr"].toMap()["tmpl"].isNull())
+        this->config.csrTmplPath = __join_paths(this->config.prefix.absoluteFilePath(), \
+                jo["csr"].toMap()["tmpl"].toString());
+    ECE_DBG("csr tmpl=" << this->config.csrTmplPath.absoluteFilePath());
 
-    ECE_ERR_IF (__parse_sb(jo["sb"].toMap()));
-    ECE_ERR_IF (__parse_sslInit(jo["ssl_init"].toMap()));
-    ECE_ERR_IF (__parse_sslOp(jo["ssl_op"].toMap()));
+    if (!jo["sb"].isNull())
+        ECE_ERR_IF (__parse_sb(jo["sb"].toMap()));
 
-    config.rsaBits = jo["rsa"].toMap()["bits"].toInt();
-    ECE_ERR_MSG_IF ((config.rsaBits == 0 || (config.rsaBits % 512) != 0),
-            "rsa bits must be a multiple of 512!");
-    ECE_DBG("rsa bits=" << config.rsaBits);
+    if (!jo["ssl_init"].isNull())
+        ECE_ERR_IF (__parse_sslInit(jo["ssl_init"].toMap()));
+
+    if (!jo["ssl_op"].isNull())
+        ECE_ERR_IF (__parse_sslOp(jo["ssl_op"].toMap()));
+
+    if (!jo["rsa"].toMap()["bits"].isNull())
+    {
+        this->config.rsaBits = jo["rsa"].toMap()["bits"].toInt();
+        ECE_ERR_MSG_IF ((this->config.rsaBits == 0 || (this->config.rsaBits % 512) != 0),
+                "rsa bits must be a multiple of 512!");
+    }
+    ECE_DBG("rsa bits=" << this->config.rsaBits);
 
     return 0;
 err:
@@ -85,37 +95,41 @@ err:
 
 int Config::__parse_sb (const QVariantMap &jo)
 {
-    config.sbUrl = jo["url"].toString();
+    if (!jo["url"].isNull())
+        this->config.sbUrl = jo["url"].toString();
 
-    ECE_DBG("sb url=" << config.sbUrl.toString());
+    ECE_DBG("sb url=" << this->config.sbUrl.toString());
 
     return 0;
 }
 
 int Config::__parse_sslInit (const QVariantMap &jo)
 {
-    return __parse_ssl(jo, config.sslInit);
+    return __parse_ssl(jo, this->config.sslInit);
 }
 
 int Config::__parse_sslOp (const QVariantMap &jo)
 {
-    return __parse_ssl(jo, config.sslOp);
+    return __parse_ssl(jo, this->config.sslOp);
 }
 
 int Config::__parse_ssl (const QVariantMap &jo, ece_config_ssl_t &sc)
 {
-    sc.cacertPath = __join_paths(config.prefix.absoluteFilePath(), jo["cacert"].toString());
+    if (!jo["cacert"].isNull())
+        sc.cacertPath = __join_paths(this->config.prefix.absoluteFilePath(), jo["cacert"].toString());
     ECE_DBG("cacert=" << sc.cacertPath.absoluteFilePath());
 
-    sc.certPath = __join_paths(config.prefix.absoluteFilePath(), jo["cert"].toString());
+    if (!jo["cert"].isNull())
+        sc.certPath = __join_paths(this->config.prefix.absoluteFilePath(), jo["cert"].toString());
     ECE_DBG("cert=" << sc.certPath.absoluteFilePath());
 
-    sc.keyPath = __join_paths(config.prefix.absoluteFilePath(), jo["key"].toString());
+    if (!jo["key"].isNull())
+        sc.keyPath = __join_paths(this->config.prefix.absoluteFilePath(), jo["key"].toString());
     ECE_DBG("key=" << sc.keyPath.absoluteFilePath());
 
     sc.sbUrl = jo["sb"].toMap()["url"].toString();
     if (sc.sbUrl.isEmpty())
-        sc.sbUrl = config.sbUrl;
+        sc.sbUrl = this->config.sbUrl;
     ECE_ERR_MSG_IF (sc.sbUrl.isEmpty(),
             "sb url undefined!");
     ECE_DBG("sb url=" << sc.sbUrl.toString());
