@@ -1,4 +1,5 @@
 libece 0.3a-wip (DD/MM/YYYY):
+	- config: improved defaults handling
 	- build: runtime prefix by setting ECE_PREFIX_PATH
 	- test/sb += automated credential generation and SB simulator setup
 	- crypto: ece_crypto_genkey() failed if no rnd file was detected
